src/main/java/com/example/jallowbooks/errors/InternalServerError.java
package com.example.jallowbooks.errors;

public class InternalServerError extends RuntimeException{
    public InternalServerError(String message){
        super(message);
    }
}
